# Python-web-hw04

./: Commands.txt  Dockerfile  pyproject.toml  requirements.txt
application/: main.py
front-init/storage/: data.json
