[tool.poetry]
name = "application"
version = "0.1.0"
description = "Home work 04 for web module"
authors = ["Mykhailo Ivanov <ivmv2007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
